use same border width information for xls import and export, fdo#44742

Signed-off-by: Kohei Yoshida <kohei.yoshida@gmail.com>